# UAST

Module1/exercise41/: exercise_41.py
Module1/exercise43/: exercise.py  exercise4_3.py  nmea_parser_class.py
Module1/rmuast_s17_module_1/: main.tex
Module2/exercise4/: exercise_4-1.py  logfile_parser.py
Module5/exercise_imu/: imu_exercise.py  imu_exercise_4_1_1_pitch.py  imu_exercise_4_1_2_roll.py  imu_exercise_4_1_3_static.py  imu_exercise_4_2_1.py  imu_exercise_4_2_2.py  imu_exercise_4_2_3.py  nmea_data.txt  nmea_data_logger.py
Module5/exercise_imu_kalman/: imu_box3d.py  imu_exercise_kalman.py
Module6/: file_locations.txt  iris.sdf  markerlocator.launch
Module6/devel/: .catkin  .rosinstall  setup.sh
Module6/devel/lib/pkgconfig/: simulation.pc
Module6/devel/lib/simulation/: MarkerLocater  NeuralControler  XboxController  simulation  simulation_1
Module6/devel/share/simulation/cmake/: simulationConfig.cmake
Module6/src/simulation/: CMakeLists.txt
Module6/src/simulation/include/: Joystick.hpp
Module6/src/simulation/src/: Joystick.cpp  markerLocator.cpp  neural.cpp  xboxController.cpp
Module7/: AQLogReader.py  PlanCleaner.py  exercise-4-1-3.py  export_kml.py  export_to_qgc.py  nmea_parser_class.py  route_plan_class.py  waypoints.txt  waypoints_aq.txt  write_qgc_file.py
Project/firmware/: I2C_slave.c  I2C_slave_Alt.c  I2C_slave_Alt.h  Makefile  avr_serial.c  avr_serial.h  fmctrl_def.h  main.c  main.elf  main.hex
